# Genqo.jl

./: .bumpversion.toml  .gitattributes  .gitignore  CHANGELOG.md  Project.toml  README.md  justfile
.github/workflows/: ci.yml  docs.yml  pypi.yml  release.yml  tagbot.yml
assets/data/: jl-bench.json  precision_raw.json
docs/: Project.toml  make.jl
docs/src/: getting_started.md  index.md  references.bib
docs/src/reference/: sigsag.md  spdc.md  tmsv.md  tools.md  zalm.md
docs/tutorial/: genqo-v1-v2-cmp.jl  hybrid_model_jl.ipynb  hybrid_model_py.ipynb  legos.jl
python/: pyproject.toml
python/genqo/: genqo.py
src/: Genqo.jl  circuits.jl  detectors.jl  gates.jl  metrics.jl  registers.jl  sigsag.jl  spdc.jl  states.jl  tmsv.jl  tools.jl  zalm.jl
test/: Project.toml  bench.jl  bench_compare.jl
test/genqo_old_pkg/genqo_old/: __init__.py  genqo_old_pip.py
test/python/: conftest.py  plot_comparison.py  precision_table.py  test_compare_with_python.py
tutorial/: legos.jl
