[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genqo"
version = "1.0.0"
description = "Genqo.jl: A Hybrid Gaussian/Non-Gaussian Quantum Optics State Engine for Entanglement Source Modelling"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Gabe Richardson", email = "rgb@umd.edu"},
    {name = "Jacob Gunnell", email = "jacob.r.gunnell@gmail.com"},
]
keywords = ["quantum", "optics", "gaussian", "quantum-information"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "juliacall>=0.9.31",
    "attrs>=25.4.0",
    "numpy>=2.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-benchmark>=5.2.0",
]

[project.urls]
#Homepage = "https://github.com/JacobGunnell/genqo.jl"
#Documentation = "https://genqo.rtfd.io/en/stable/"
Repository = "https://github.com/JacobGunnell/genqo.jl"
Issues = "https://github.com/JacobGunnell/genqo.jl/issues"

[tool.setuptools]
packages = ["genqo"]
